force-app/main/default/objects/RecordType__c/RecordType__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Record Type</label>
</CustomObject>