force-app/main/default/objects/RecordType__c/fields/AirExLockRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>AirExLockRecordTypeID__c</fullName>
    <label>Air Export Lock Record Type ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>