force-app/main/default/objects/RecordType__c/fields/AirImLockRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>AirImLockRecordTypeID__c</fullName>
    <label>Air Import Lock Record Type ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>