force-app/main/default/objects/RecordType__c/fields/CroBorLockRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>CroBorLockRecordTypeID__c</fullName>
    <label>Crossborder Lock Record Type ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>