force-app/main/default/objects/RecordType__c/fields/DomeTransLockRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>DomeTransLockRecordTypeID__c</fullName>
    <label>Domestic Transport Lock Record Type ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>