force-app/main/default/objects/RecordType__c/fields/LogisticLockRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>LogisticLockRecordTypeID__c</fullName>
    <label>Logistics Lock Record Type ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>