force-app/main/default/objects/RecordType__c/fields/OceanExLockRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>OceanExLockRecordTypeID__c</fullName>
    <label>Ocean Export Lock Record Type ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>