force-app/main/default/objects/RecordType__c/fields/OceanImLockRecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>OceanImLockRecordTypeID__c</fullName>
    <label>Ocean Import Lock Record Type ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>